--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.dagger.hilt.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -30,8 +32,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            jvmTarget = "11"
+        }
     }
     buildFeatures {
         compose true
@@ -60,11 +65,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
+    implementation platform('androidx.compose:compose-bom:2022.10.00')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
     implementation "androidx.navigation:navigation-compose:2.6.0-alpha07"
@@ -76,4 +83,59 @@ dependencies {
             because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
         }
     }
+
+    // compose image loading
+    implementation "com.github.skydoves:landscapist-coil:1.4.3"
+    //============ hilt  =====
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    kapt "com.google.dagger:hilt-compiler:2.44.2"
+
+    //=========== Network ====
+    implementation "com.github.skydoves:sandwich:1.2.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.7.2"
+
+    // ============== room =====
+    implementation "androidx.room:room-runtime:2.5.1"
+    implementation "androidx.room:room-ktx:2.5.1"
+    kapt "androidx.room:room-compiler:2.5.1"
+
+    // compose
+    implementation "androidx.compose.ui:ui:1.4.2"
+    implementation "androidx.activity:activity-compose:1.7.1"
+    implementation "androidx.compose.material:material:1.4.2"
+    implementation "androidx.compose.material:material-icons-extended:1.4.2"
+    implementation "androidx.compose.foundation:foundation:1.4.2"
+    implementation "androidx.compose.foundation:foundation-layout:1.4.2"
+    implementation "androidx.compose.animation:animation:1.4.2"
+    implementation "androidx.compose.runtime:runtime:1.4.2"
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.compose.ui:ui-tooling:1.4.2"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.2"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    // compose compatibles
+    implementation "com.github.skydoves:orchestra-balloon:1.1.1"
+    // logging
+    implementation "com.jakewharton.timber:timber:5.0.1"
+
+    // hilt
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    kapt "com.google.dagger:hilt-compiler:2.44.2"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.44.2"
+    kaptAndroidTest "com.google.dagger:hilt-compiler:2.44.2"
+
+    // compose insets
+    implementation "com.google.accompanist:accompanist-insets:0.20.0"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.20.0"
+
+    implementation "com.github.skydoves:whatif:1.1.2"
+
+}
+
+kapt {
+    correctErrorTypes true
 }
